[Sync] Avoid sending the processor metadata again on re-enabling sync.

BUG=658735

Review-Url: https://codereview.chromium.org/2451793003
Cr-Commit-Position: refs/heads/master@{#427478}

Former-commit-id: 07030cf31bf5c6b7d1180ddc4033e452086ec0c3